test/deca/syntax/invalid/printx_incomplet_2.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (manque ;)

{
    printx(0xabcd)
}